--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
                 <!-- Seção Início -->
                 <section id="inicio" class="content-section active">
                      <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
-                        <h2 class="text-2xl sm:text-3xl font-bold text-green-700 mb-4">Bem-vindos ao projeto "Festejando a conexão campo-cidade"!</h2>
+                        <h2 class="text-2xl sm:text-3xl font-bold text-green-700 mb-2">Bem-vindos ao projeto "Festejando a conexão campo-cidade"!</h2>
+                        <p class="text-xl font-medium text-gray-500 mb-4">Na Escola Municipal Liomar Gomes</p>
                         <p class="text-gray-600 mb-6 leading-relaxed">Este espaço é dedicado a compartilhar a experiência pedagógica desenvolvida para o Concurso Agrinho 2025...</p>
                         
                         <!-- Contador Regressivo Integrado -->
