--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                             <li><a href="#" class="nav-link block p-2 rounded-md hover:bg-green-100 text-sm" data-target="turma-5">5º Ano</a></li>
                         </ul>
                     </li>
+                    <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="biblioteca-sementes"><i data-feather="book-open" class="w-5 h-5 mr-3"></i> Biblioteca de Sementes</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="visitas"><i data-feather="camera" class="w-5 h-5 mr-3"></i> Visitas</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="jogos"><i data-feather="play-circle" class="w-5 h-5 mr-3"></i> Jogos</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="timeline"><i data-feather="git-commit" class="w-5 h-5 mr-3"></i> Linha do Tempo</a></li>
@@ -283,7 +284,7 @@
                                 <p class="mt-4 text-gray-700 leading-relaxed">O "Projeto Abelha" visa introduzir os alunos do primeiro ano ao fascinante mundo das abelhas e sua importância para o meio ambiente. Através de atividades lúdicas e educativas, os alunos aprenderão sobre a vida das abelhas, a produção de mel e a polinização.</p>
                                 <p class="mt-4 text-gray-700 leading-relaxed"><strong class="font-semibold text-gray-800">Objetivos:</strong> Desenvolver a curiosidade sobre os insetos, promover a conscientização sobre a importância das abelhas e estimular a observação da natureza.</p>
                             </div>
-                            <img src="https://placehold.co/700x400/dcfce7/166534?text=Foto+da+Turma+do+1º+Ano" alt="Foto da turma do 1º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6">
+                            <img src="https://placehold.co/600x300/dcfce7/166534?text=Foto+da+Turma+do+1º+Ano" alt="Foto da turma do 1º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 2º ANO -->
@@ -298,7 +299,19 @@
                                 <p class="mt-4 text-gray-700 leading-relaxed">O projeto "Guardiões das Sementes" tem como objetivo ensinar os alunos sobre a importância das sementes, o ciclo de vida das plantas e a agricultura sustentável. Os alunos participarão do plantio, cuidado e colheita de uma pequena horta na escola.</p>
                                 <p class="mt-4 text-gray-700 leading-relaxed"><strong class="font-semibold text-gray-800">Objetivos:</strong> Conscientizar sobre a origem dos alimentos, promover o contato com a natureza, desenvolver o senso de responsabilidade e trabalho em equipe.</p>
                             </div>
-                            <img src="https://placehold.co/700x400/bbf7d0/166534?text=Foto+da+Turma+do+2º+Ano" alt="Foto da turma do 2º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6">
+                            <!-- Card de Acesso à Biblioteca -->
+                             <div class="mt-8 pt-6 border-t border-green-200">
+                                <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-2xl transition-shadow cursor-pointer nav-link" data-target="biblioteca-sementes">
+                                    <div class="flex items-center gap-4">
+                                        <i data-feather="book-open" class="w-10 h-10 text-green-600"></i>
+                                        <div>
+                                            <h3 class="text-xl font-bold text-green-800">Acessar a Biblioteca Digital de Sementes</h3>
+                                            <p class="text-gray-600">Clique aqui para explorar nosso catálogo de sementes.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <img src="https://placehold.co/600x300/bbf7d0/166534?text=Foto+da+Turma+do+2º+Ano" alt="Foto da turma do 2º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 3º ANO -->
@@ -313,7 +326,7 @@
                                 <p class="mt-4 text-gray-700 leading-relaxed">O projeto "Horta e Curiosidades" convida os alunos do terceiro ano a explorar o mundo da jardinagem, aprendendo sobre o cultivo de alimentos e descobrindo fatos interessantes sobre as plantas e o solo. Eles participarão ativamente da criação e manutenção de uma horta escolar.</p>
                                 <p class="mt-4 text-gray-700 leading-relaxed"><strong class="font-semibold text-gray-800">Objetivos:</strong> Incentivar uma alimentação saudável, ensinar sobre o ciclo de vida das plantas, desenvolver habilidades de trabalho em equipe e paciência, e despertar a curiosidade científica sobre a natureza.</p>
                             </div>
-                            <img src="https://placehold.co/700x400/86efac/166534?text=Foto+da+Turma+do+3º+Ano" alt="Foto da turma do 3º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6">
+                            <img src="https://placehold.co/600x300/86efac/166534?text=Foto+da+Turma+do+3º+Ano" alt="Foto da turma do 3º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 4º ANO -->
@@ -332,7 +345,7 @@
                                     <strong class="font-semibold text-gray-800">Objetivos:</strong> Desmistificar a imagem do campo como um lugar "atrasado", entender o papel da tecnologia na produção de alimentos e despertar o interesse por carreiras inovadoras.
                                 </p>
                             </div>
-                            <img src="https://placehold.co/700x400/4ade80/166534?text=Foto+da+Turma+do+4º+Ano" alt="Foto da turma do 4º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6">
+                            <img src="https://placehold.co/600x300/4ade80/166534?text=Foto+da+Turma+do+4º+Ano" alt="Foto da turma do 4º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 5º ANO -->
@@ -351,15 +364,25 @@
                                     <strong class="font-semibold text-gray-800">Objetivos:</strong> Compreender a relação entre matéria-prima e produto industrializado, analisar dados económicos básicos e valorizar a importância da economia rural para a comunidade.
                                 </p>
                             </div>
-                            <img src="https://placehold.co/700x400/22c55e/166534?text=Foto+da+Turma+do+5º+Ano" alt="Foto da turma do 5º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6">
+                            <img src="https://placehold.co/600x300/22c55e/166534?text=Foto+da+Turma+do+5º+Ano" alt="Foto da turma do 5º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                 </div>
+                <!-- Seção Biblioteca de Sementes -->
+                 <section id="biblioteca-sementes" class="content-section">
+                    <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
+                        <h2 class="text-2xl sm:text-3xl font-bold text-green-700 mb-4">Biblioteca Digital de Sementes</h2>
+                        <p class="text-gray-600 mb-8 leading-relaxed">Explore nosso catálogo de sementes. Clique em uma semente para ver mais detalhes e obter dicas de plantio com a ajuda da nossa IA!</p>
+                        <div id="seed-gallery" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 text-center">
+                            <!-- Cards de Sementes serão populados aqui -->
+                        </div>
+                    </div>
+                </section>
                 <!-- Seção Visitas -->
                 <section id="visitas" class="content-section">
                      <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
                         <h2 class="text-2xl sm:text-3xl font-bold text-green-700 mb-4">Registos das Nossas Visitas</h2>
-                        <p class="text-gray-600 mb-8 leading-relaxed">Aqui poderá visualizar os registos fotográficos e em vídeo das visitas e atividades externas que realizamos ao longo do projeto. Estes momentos foram fundamentais para conectar os estudantes com a realidade do campo e da cidade, enriquecendo a nossa experiência pedagógica.</p>
+                        <p class="text-gray-600 mb-8 leading-relaxed">Aqui poderá visualizar os registos fotográficos e em vídeo das visitas e atividades externas que realizamos ao longo do projeto.</p>
                         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
                             <div class="group relative overflow-hidden rounded-lg shadow-lg"><img src="https://placehold.co/400x300/f59e0b/ffffff?text=Meliponario" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="Visita à Chácara São Luiz"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-end p-4"><p class="text-white font-semibold">Chácara São Luiz Meliponário</p></div></div>
                             <div class="group relative overflow-hidden rounded-lg shadow-lg"><img src="https://placehold.co/400x300/a7f3d0/14532d?text=Piquenique" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="Piquenique no Parque Manduhi"><div class="absolute inset-0 bg-black bg-opacity-40 flex items-end p-4"><p class="text-white font-semibold">Parque Manduhi (Piquenique)</p></div></div>
