--- a/index.html
+++ b/index.html
@@ -445,21 +445,21 @@
                                     </div>
                                 </div>
                                 <div class="nav-link bg-green-50 rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 cursor-pointer" data-target="visita-john-deere">
-                                    <img src="https://placehold.co/400x250/4ade80/14532d?text=John+Deere" alt="Visita à W.A Maquinas John Deere" class="w-full h-40 object-cover pointer-events-none">
+                                    <img src="imagens/Visitas/John Deere/John (1).jpg" alt="Visita à W.A Maquinas John Deere" class="w-full h-40 object-cover pointer-events-none">
                                     <div class="p-4 pointer-events-none">
                                         <h3 class="font-bold text-lg text-green-800">Visita à W.A Maquinas John Deere</h3>
                                         <p class="text-sm text-gray-600 mt-1">29 de Maio de 2025</p>
                                     </div>
                                 </div>
                                 <div class="nav-link bg-green-50 rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 cursor-pointer" data-target="visita-horta">
-                                    <img src="https://placehold.co/400x250/22c55e/14532d?text=Horta+Escolar" alt="Atividade na Horta" class="w-full h-40 object-cover pointer-events-none">
+                                    <img src="imagens/Visitas/Horta/Hortas (11).jpg" alt="Atividade na Horta" class="w-full h-40 object-cover pointer-events-none">
                                     <div class="p-4 pointer-events-none">
                                         <h3 class="font-bold text-lg text-green-800">Atividade na Horta</h3>
                                         <p class="text-sm text-gray-600 mt-1">12 de Junho de 2025</p>
                                     </div>
                                 </div>
                                 <div class="nav-link bg-green-50 rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300 cursor-pointer" data-target="visita-copagril">
-                                    <img src="https://placehold.co/400x250/16a34a/ffffff?text=Copagril" alt="Visita à Copagril" class="w-full h-40 object-cover pointer-events-none">
+                                    <img src="imagens/Visitas/Copagril/copagril (4).jpg" alt="Visita à Copagril" class="w-full h-40 object-cover pointer-events-none">
                                     <div class="p-4 pointer-events-none">
                                         <h3 class="font-bold text-lg text-green-800">Visita à Copagril</h3>
                                         <p class="text-sm text-gray-600 mt-1">13 de Junho de 2025</p>
@@ -544,11 +544,11 @@
                                 </div>
                             </div>
                             <div class="grid grid-cols-2 lg:grid-cols-3 gap-4">
-                                <img src="https://placehold.co/600x400/4ade80/14532d?text=Foto+1" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/4ade80/14532d?text=Foto+2" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/4ade80/14532d?text=Foto+3" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/4ade80/14532d?text=Foto+4" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/4ade80/14532d?text=Foto+5" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/John Deere/John (1).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/John Deere/John (18).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/John Deere/John (14).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/John Deere/John (8).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/John Deere/John (20).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
                             </div>
                         </div>
                     </section>
@@ -562,11 +562,11 @@
                                 </div>
                             </div>
                             <div class="grid grid-cols-2 lg:grid-cols-3 gap-4">
-                                <img src="https://placehold.co/600x400/22c55e/14532d?text=Foto+1" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/22c55e/14532d?text=Foto+2" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/22c55e/14532d?text=Foto+3" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/22c55e/14532d?text=Foto+4" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/22c55e/14532d?text=Foto+5" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Horta/Hortas (11).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Horta/Hortas (2).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Horta/Hortas (8).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Horta/Hortas (12).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Horta/Hortas (14).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
                             </div>
                         </div>
                     </section>
@@ -580,11 +580,11 @@
                                 </div>
                             </div>
                             <div class="grid grid-cols-2 lg:grid-cols-3 gap-4">
-                                <img src="https://placehold.co/600x400/16a34a/ffffff?text=Foto+1" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/16a34a/ffffff?text=Foto+2" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/16a34a/ffffff?text=Foto+3" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/16a34a/ffffff?text=Foto+4" class="rounded-lg shadow-md w-full h-auto object-cover">
-                                <img src="https://placehold.co/600x400/16a34a/ffffff?text=Foto+5" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Copagril/copagril (4).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Copagril/copagril (17).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Copagril/copagril (25).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Copagril/copagril (38).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
+                                <img src="imagens/Visitas/Copagril/copagril (9).jpg" class="rounded-lg shadow-md w-full h-auto object-cover">
                             </div>
                         </div>
                     </section>
