--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                 <p class="mt-4 text-gray-700 leading-relaxed">O "Projeto Abelha" visa introduzir os alunos do primeiro ano ao fascinante mundo das abelhas e sua importância para o meio ambiente. Através de atividades lúdicas e educativas, os alunos aprenderão sobre a vida das abelhas, a produção de mel e a polinização.</p>
                                 <p class="mt-4 text-gray-700 leading-relaxed"><strong class="font-semibold text-gray-800">Objetivos:</strong> Desenvolver a curiosidade sobre os insetos, promover a conscientização sobre a importância das abelhas e estimular a observação da natureza.</p>
                             </div>
-                            <img src="https://placehold.co/600x300/dcfce7/166534?text=Foto+da+Turma+do+1º+Ano" alt="Foto da turma do 1º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
+                            <img src="imagens/Turmas/1º ano/1 ano.jpg" alt="Foto da turma do 1º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 2º ANO -->
@@ -312,7 +312,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <img src="https://placehold.co/600x300/bbf7d0/166534?text=Foto+da+Turma+do+2º+Ano" alt="Foto da turma do 2º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
+                            <img src="imagens/Turmas/2º Ano/2 ano.jpg" alt="Foto da turma do 2º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 3º ANO -->
@@ -327,7 +327,7 @@
                                 <p class="mt-4 text-gray-700 leading-relaxed">O projeto "Horta e Curiosidades" convida os alunos do terceiro ano a explorar o mundo da jardinagem, aprendendo sobre o cultivo de alimentos e descobrindo fatos interessantes sobre as plantas e o solo. Eles participarão ativamente da criação e manutenção de uma horta escolar.</p>
                                 <p class="mt-4 text-gray-700 leading-relaxed"><strong class="font-semibold text-gray-800">Objetivos:</strong> Incentivar uma alimentação saudável, ensinar sobre o ciclo de vida das plantas, desenvolver habilidades de trabalho em equipe e paciência, e despertar a curiosidade científica sobre a natureza.</p>
                             </div>
-                            <img src="https://placehold.co/600x300/86efac/166534?text=Foto+da+Turma+do+3º+Ano" alt="Foto da turma do 3º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
+                            <img src="imagens/Turmas/3º Ano/3 ano.jpg" alt="Foto da turma do 3º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 4º ANO -->
@@ -346,7 +346,7 @@
                                     <strong class="font-semibold text-gray-800">Objetivos:</strong> Desmistificar a imagem do campo como um lugar "atrasado", entender o papel da tecnologia na produção de alimentos e despertar o interesse por carreiras inovadoras.
                                 </p>
                             </div>
-                            <img src="https://placehold.co/600x300/4ade80/166534?text=Foto+da+Turma+do+4º+Ano" alt="Foto da turma do 4º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
+                            <img src="imagens/Turmas/4º Ano/4 ano.jpg" alt="Foto da turma do 4º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                     <!-- 5º ANO -->
@@ -377,7 +377,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <img src="https://placehold.co/600x300/22c55e/166534?text=Foto+da+Turma+do+5º+Ano" alt="Foto da turma do 5º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
+                            <img src="imagens/Turmas/5º Ano/5 ano.jpg" alt="Foto da turma do 5º ano" class="w-full h-auto object-cover rounded-lg shadow-md mt-6 max-h-[300px]">
                         </div>
                     </section>
                 </div>
@@ -398,25 +398,35 @@
                              <h2 class="text-4xl font-bold text-gray-800" style="font-family: 'Times New Roman', serif;">Jornal Conectados</h2>
                              <p class="text-gray-500">As últimas notícias da conexão campo-cidade</p>
                         </div>
-
-                        <div class="border-t-4 border-b-4 border-gray-800 py-2 mb-8">
-                            <h3 id="headline-title" class="text-2xl md:text-3xl font-bold text-center text-gray-900">Alunos descobrem o caminho da mandioca, da fazenda à mesa!</h3>
+                        
+                        <!-- Notícia Principal -->
+                        <div class="mb-10 pb-10 border-b-2 border-gray-200">
+                            <h3 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">Alunos do 5º Ano Desvendam a Economia por Trás do Campo</h3>
+                            <img src="https://placehold.co/800x450/166534/ffffff?text=Agroindústria+Local" alt="Alunos investigando a agroindústria" class="w-full rounded-lg shadow-lg mb-4">
+                            <p class="text-gray-700 leading-relaxed">Os detetives económicos do 5º ano estão em campo! No projeto "Agroindústria e a Economia Local", os alunos mergulharam nos números e processos que transformam as matérias-primas da nossa região em produtos que chegam a todo o país. Eles investigaram como a produção agrícola local gera empregos, impulsiona o comércio e fortalece a nossa comunidade, compreendendo na prática a vital conexão económica entre o campo e a cidade.</p>
                         </div>
 
-                        <div class="grid md:grid-cols-3 gap-8">
-                            <div class="md:col-span-2">
-                                <img src="https://placehold.co/800x450/a7f3d0/14532d?text=Reportagem+Principal" alt="Reportagem principal" class="w-full rounded-lg shadow-lg mb-4">
-                                <p class="text-gray-700 leading-relaxed">Nesta edição, acompanhamos a incrível jornada dos alunos do 3º ano para descobrir de onde vêm os alimentos. A visita à cooperativa Copagril revelou os segredos da produção de leite e a importância da tecnologia para garantir a qualidade dos produtos que chegam às nossas casas. Os estudantes viram de perto os tanques de resfriamento, os laboratórios de análise e conversaram com os produtores sobre o dia a dia no campo.</p>
+                        <!-- Notícias Secundárias -->
+                        <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+                            <div class="space-y-4">
+                                <img src="https://placehold.co/400x250/4ade80/14532d?text=Tecnologia+no+Campo" alt="Tecnologia na agricultura" class="w-full rounded-lg shadow-md">
+                                <h4 class="font-bold text-lg text-gray-800">Tecnologia e Inovação: 4º Ano Explora o Futuro da Agricultura</h4>
+                                <p class="text-sm text-gray-600">Drones a sobrevoar as plantações e tratores guiados por GPS já não são ficção científica para a turma do 4º ano. Os alunos estão a pesquisar como a tecnologia está a revolucionar o campo, aumentando a sustentabilidade e a eficiência da produção de alimentos.</p>
                             </div>
-                            <div class="space-y-6">
-                                <div class="bg-gray-100 p-4 rounded-lg">
-                                    <h4 class="font-bold text-lg mb-2">Horta Escolar dá os primeiros frutos</h4>
-                                    <p class="text-sm text-gray-600">O projeto "Guardiões das Sementes" do 2º ano já está a dar resultados! As primeiras folhas de alface e os rabanetes foram colhidos e usados numa deliciosa salada.</p>
-                                </div>
-                                <div class="bg-gray-100 p-4 rounded-lg">
-                                    <h4 class="font-bold text-lg mb-2">Tecnologia e abelhas: uma combinação de sucesso</h4>
-                                    <p class="text-sm text-gray-600">Alunos do 1º e 4º anos unem-se para criar um comedouro inteligente para abelhas, combinando o amor pela natureza com a tecnologia.</p>
-                                </div>
+                             <div class="space-y-4">
+                                <img src="https://placehold.co/400x250/86efac/14532d?text=Horta+e+Curiosidades" alt="Crianças na horta" class="w-full rounded-lg shadow-md">
+                                <h4 class="font-bold text-lg text-gray-800">Horta Escolar Floresce com Curiosidades e Mãos na Terra</h4>
+                                <p class="text-sm text-gray-600">Com as mãos na terra, o 3º ano está a descobrir os segredos do cultivo no projeto "Horta e Curiosidades". Mais do que plantar, eles aprendem sobre o ciclo de vida das plantas, a importância do solo e o prazer de colher e provar um alimento cultivado por eles mesmos.</p>
+                            </div>
+                             <div class="space-y-4">
+                                <img src="https://placehold.co/400x250/bbf7d0/166534?text=Guardiões+das+Sementes" alt="Crianças com sementes" class="w-full rounded-lg shadow-md">
+                                <h4 class="font-bold text-lg text-gray-800">Guardiões das Sementes: 2º Ano Inicia Jornada do Plantio</h4>
+                                <p class="text-sm text-gray-600">Pequenas sementes, grandes responsabilidades! O 2º ano tornou-se "Guardião das Sementes", aprendendo sobre a importância de cada semente e o seu potencial. Eles iniciaram o plantio na horta da escola, acompanhando de perto cada etapa do crescimento.</p>
+                            </div>
+                             <div class="space-y-4">
+                                <img src="https://placehold.co/400x250/dcfce7/166534?text=Projeto+Abelhas" alt="Abelha numa flor" class="w-full rounded-lg shadow-md">
+                                <h4 class="font-bold text-lg text-gray-800">Zumbido de Conhecimento: 1º Ano Mergulha no Mundo das Abelhas</h4>
+                                <p class="text-sm text-gray-600">Através de atividades lúdicas, o 1º ano está a descobrir o papel fundamental das abelhas. O projeto "Pequenas Polinizadoras" tem enchido as aulas de zumbidos de curiosidade, ensinando sobre a produção de mel e a importância da polinização para o nosso planeta.</p>
                             </div>
                         </div>
                     </div>
