--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="biblioteca-sementes"><i data-feather="book-open" class="w-5 h-5 mr-3"></i> Biblioteca de Sementes</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="jornal-conectados"><i data-feather="file-text" class="w-5 h-5 mr-3"></i> Jornal Conectados</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="visitas"><i data-feather="camera" class="w-5 h-5 mr-3"></i> Visitas</a></li>
+                    <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="mascotes"><i data-feather="heart" class="w-5 h-5 mr-3"></i> Mascotes</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="jogos"><i data-feather="play-circle" class="w-5 h-5 mr-3"></i> Jogos</a></li>
                     <li><a href="#" class="nav-link flex items-center p-3 rounded-lg text-gray-700 hover:bg-green-100 hover:text-green-800 transition-colors" data-target="timeline"><i data-feather="git-commit" class="w-5 h-5 mr-3"></i> Linha do Tempo</a></li>
                 </ul>
@@ -671,6 +672,22 @@
                         </div>
                     </section>
                 </div>
+                
+                <!-- Seção Mascotes -->
+                <section id="mascotes" class="content-section">
+                    <div class="bg-white p-6 sm:p-8 rounded-xl shadow-md">
+                        <h2 class="text-2xl sm:text-3xl font-bold text-green-700 mb-4">Nosso Mascote</h2>
+                        <p class="text-gray-600 mb-8 leading-relaxed">Conheça o nosso simpático mascote que representa a alegria da conexão entre o campo e a cidade!</p>
+                        <div class="grid grid-cols-1 place-items-center gap-10 text-center">
+                             <!-- Mascote Sementinha -->
+                            <div class="flex flex-col items-center max-w-sm">
+                                <img src="imagens/mascotes/sementinha 2.jpg" alt="Mascote Sementinha" class="w-48 h-48 mx-auto rounded-full shadow-lg border-4 border-white mb-4 object-cover">
+                                <h3 class="text-2xl font-bold text-lime-700">Sementinha</h3>
+                                <p class="text-gray-600 mt-2">O Sementinha é o guardião de todo o potencial da natureza. Pequeno, mas cheio de vida, ele simboliza o início de tudo, a esperança e o futuro sustentável que plantamos hoje para colher amanhã.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!-- Seção Jogos -->
                 <section id="jogos" class="content-section">
